@startuml RequirementArchitecture
!theme toy
title Web4Requirement Architecture (Current State)

package "Web4Requirement Component" <<Rectangle>> {
  package "Layer 5 - CLI" <<Cloud>> {
    class RequirementCLI {
      +handleCommand()
      +handleCreate()
      +handleDelete()
      +handleUpdate()
      +handleMove()
      +showUsage()
      +on(component, version) : fluent API
    }
  }
  
  package "Layer 3 - Interfaces" <<Cloud>> {
    interface Requirement {
      +create()
      +delete()
      +update()
      +move()
      +saveScenario()
      +loadFromScenario()
      +generateMDView()
    }
    
    interface RequirementResult {
      +success: boolean
      +message: string
      +requirementId?: string
      +deletedFiles?: string[]
    }
  }
  
  package "Layer 2 - Implementation" <<Cloud>> {
    class DefaultRequirement {
      -uuid: string
      -name: string
      -description: string
      -status: RequirementStatus
      -scenario: RequirementScenario
      -fullScenarioData: any
      -explicitComponentRoot: string
      
      +create(title, description)
      +delete(identifier)
      +saveScenario(uuid, scenario) 🔥 CORE LOGIC
      +loadFromScenario(path) 🔥 CORE LOGIC
      +generateMDView() 🔥 CORE LOGIC
      +updateOverview() 🔥 CORE LOGIC
      +on(component, version) 🔥 CONTEXT API
      +findProjectRoot() 🔥 UTILITY
      +getRequirementsDirectory() 🔥 UTILITY
      +decodeOwnerDetails() 🔥 UTILITY
    }
    
    class DefaultMDView {
      +render()
      +renderMD()
      +formatMD() 🔥 CORE LOGIC
    }
    
    class DefaultTemplateProcessor {
      +processTemplate() 🔥 CORE LOGIC
      +loadTemplate() 🔥 CORE LOGIC
    }
  }
  
  package "Storage Dependencies" <<Rectangle>> {
    class UnitIndexStorage {
      +saveScenario() 🔥 CENTRAL STORAGE
      +loadScenario() 🔥 CENTRAL STORAGE
    }
    
    class DefaultUser {
      +getOwnerObject() 🔥 OWNER MANAGEMENT
    }
  }
}

' Dependencies
DefaultRequirement --> UnitIndexStorage : uses
DefaultRequirement --> DefaultUser : uses
DefaultRequirement --> DefaultMDView : uses
DefaultMDView --> DefaultTemplateProcessor : uses
RequirementCLI --> DefaultRequirement : uses

' Core functionality indicators
note top of DefaultRequirement : 🔥 MATURE IMPLEMENTATION\nExtensive functionality:\n- Component context API\n- Delete command\n- Owner details decoding\n- Multi-format handling
note right of DefaultMDView : 🔥 VIEW SYSTEM\nTemplate-based MD generation\nwith owner detail integration
note bottom of UnitIndexStorage : 🔥 CENTRAL STORAGE\nUUID-based scenario indexing\nwith symlink management

@enduml
